--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@ for(var i = 0; i < menuLinks.length; i++){
   <script src="js/vue.js"></script>
   <script src="js/axios.js"></script>
   <script src="js/app.js" type="text/javascript"></script>
-  <script src="js/agropartnerships.js" type="text/javascript"></script>
+  <script src="js/style.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 
