--- a/investments.html
+++ b/investments.html
@@ -459,7 +459,7 @@
 </script>
 
   <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
-  <script src="js/agropartnerships.js" type="text/javascript"></script>
+  <script src="js/style.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 
