--- a/legal660a.html
+++ b/legal660a.html
@@ -428,7 +428,7 @@
 </script>
 
       <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
-      <script src="js/agropartnerships.js" type="text/javascript"></script>
+      <script src="js/style.js" type="text/javascript"></script>
       <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
       <script>
          var Webflow = Webflow || [];
