--- a/login.html
+++ b/login.html
@@ -192,7 +192,7 @@
     </div>
   </div>
   <script src="js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="js/agropartnerships.js" type="text/javascript"></script>
+  <script src="js/style.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <script>
   var ix = Webflow.require('ix');
